--- a/APP/app-deployment.yml
+++ b/APP/app-deployment.yml
@@ -30,7 +30,7 @@ spec:
         - name: ONIFY_API_URL_INTERNAL
           value: http://onify-api:8181/api/v2
         - name: ONIFY_API_URL_EXTERNAL
-          value: http://localhost:8181
+          value: https://onify-api-dev.it.helsinki.fi/api/v2
         ports:
         - name: app
           containerPort: 3000
