--- a/API/api-configmap.yml
+++ b/API/api-configmap.yml
@@ -9,7 +9,7 @@ data:
   ONIFY_db_elasticsearch_host: http://elasticsearch:9200
   ONIFY_db_indexPrefix: onify # indices will be prefixed with this string
   ONIFY_client_code: hel
-  ONIFY_client_instance: test2
+  ONIFY_client_instance: prod2
   ONIFY_evaluationLicense: < INSERT LICENSE >
   ONIFY_adminUser_username: admin
   ONIFY_adminUser_email: hello@onify.co
