--- a/API/api-configmap.yml
+++ b/API/api-configmap.yml
@@ -3,14 +3,14 @@ kind: ConfigMap
 metadata:
   name: onify-api-config
 data:
-  NODE_ENV: test # environment test/production
+  NODE_ENV: production # environment test/production
   ENV_PREFIX: ONIFY_ #
   INTERPRET_CHAR_AS_DOT: _
   ONIFY_db_elasticsearch_host: http://elasticsearch:9200
   ONIFY_db_indexPrefix: onify # indices will be prefixed with this string
   ONIFY_client_code: hel
   ONIFY_client_instance: prod2
-  ONIFY_evaluationLicense: < INSERT LICENSE >
+  ONIFY_evaluationLicense: <insert license >
   ONIFY_adminUser_username: admin
   ONIFY_adminUser_email: hello@onify.co
   ONIFY_resources_baseDir: /usr/share/onify/resources
