--- a/API/onify-api-deployment.yml
+++ b/API/onify-api-deployment.yml
@@ -20,7 +20,7 @@ spec:
       - name: onify-regcred
       containers:
       - name: api
-        image: eu.gcr.io/onify-images/hub/api:latest
+        image: eu.gcr.io/onify-images/hub/api:2
         envFrom:
         - configMapRef:
             name: onify-api-config
