--- a/APP/app-deployment.yml
+++ b/APP/app-deployment.yml
@@ -20,7 +20,7 @@ spec:
       - name: onify-regcred
       containers:
       - name: app
-        image: eu.gcr.io/onify-images/hub/app:latest
+        image: eu.gcr.io/onify-images/hub/app:2
         env:
         - name: ONIFY_API_TOKEN
           valueFrom:
@@ -30,7 +30,7 @@ spec:
         - name: ONIFY_API_URL_INTERNAL
           value: http://onify-api:8181/api/v2
         - name: ONIFY_API_URL_EXTERNAL
-          value: https://onify-api-dev.it.helsinki.fi/api/v2
+          value: https://onify-api-ext.it.helsinki.fi/api/v2
         ports:
         - name: app
           containerPort: 3000
