--- a/APP/app-deployment.yml
+++ b/APP/app-deployment.yml
@@ -20,7 +20,7 @@ spec:
       - name: onify-regcred
       containers:
       - name: app
-        image: eu.gcr.io/onify-images/hub/app:latest
+        image: eu.gcr.io/onify-images/hub/app:2
         env:
         - name: ONIFY_API_TOKEN
           valueFrom:
