--- a/API/onify-api-route.yml
+++ b/API/onify-api-route.yml
@@ -2,14 +2,15 @@ kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
   name: onify-api-ext
-  namespace: onify
-  selfLink: /apis/route.openshift.io/v1/namespaces/onify/routes/onify-api-dev
+  namespace: onify-ext
+  selfLink: /apis/route.openshift.io/v1/namespaces/onify/routes/onify-api-ext
   uid: 2a37bdd3-ece1-4075-b786-81f255a14f35
   resourceVersion: '76008234'
   creationTimestamp: '2020-10-07T07:05:25Z'
   labels:
     app: onify
     tier: api
+    type: external
   managedFields:
     - manager: Mozilla
       operation: Update
@@ -81,7 +82,7 @@ spec:
   wildcardPolicy: None
 status:
   ingress:
-    - host: onify-api-dev.it.helsinki.fi
+    - host: onify-api-ext.it.helsinki.fi
       routerName: default
       conditions:
         - type: Admitted
