--- a/API/onify-api-deployment.yml
+++ b/API/onify-api-deployment.yml
@@ -21,6 +21,7 @@ spec:
       containers:
       - name: api
         image: eu.gcr.io/onify-images/hub/api:2
+        imagePullPolicy: Always
         envFrom:
         - configMapRef:
             name: onify-api-config
