--- a/APP/app-deployment.yml
+++ b/APP/app-deployment.yml
@@ -22,6 +22,13 @@ spec:
       - name: app
         image: eu.gcr.io/onify-images/hub/app:2
         imagePullPolicy: Always
+        resources:
+          requests:
+            memory: "1000Mi"
+            cpu: "500m"
+          limits:
+            memory: "2000Mi"
+            cpu: "2"
         env:
         - name: ONIFY_API_TOKEN
           valueFrom:
