--- a/APP/onify-route.yml
+++ b/APP/onify-route.yml
@@ -1,9 +1,9 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name: onify-dev
+  name: onify-ext
   namespace: onify
-  selfLink: /apis/route.openshift.io/v1/namespaces/onify/routes/onify-dev
+  selfLink: /apis/route.openshift.io/v1/namespaces/onify/routes/onify-ext
   uid: 7b164d88-a602-4f30-a249-b551fb833241
   resourceVersion: '76001823'
   creationTimestamp: '2020-10-07T06:45:32Z'
@@ -51,7 +51,7 @@ metadata:
         'f:status':
           'f:ingress': {}
 spec:
-  host: onify-dev.it.helsinki.fi
+  host: onify-ext.it.helsinki.fi
   to:
     kind: Service
     name: onify-app
@@ -82,7 +82,7 @@ spec:
   wildcardPolicy: None
 status:
   ingress:
-    - host: onify-dev.it.helsinki.fi
+    - host: onify-ext.it.helsinki.fi
       routerName: default
       conditions:
         - type: Admitted
