--- a/API/api-configmap.yml
+++ b/API/api-configmap.yml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: onify-api-config
 data:
-  NODE_ENV: production # environment test/production
+  NODE_ENV: test # environment test/production
   ENV_PREFIX: ONIFY_ #
   INTERPRET_CHAR_AS_DOT: _
   ONIFY_db_elasticsearch_host: http://elasticsearch:9200
