--- a/APP/app-deployment.yml
+++ b/APP/app-deployment.yml
@@ -38,7 +38,7 @@ spec:
         - name: ONIFY_API_URL_INTERNAL
           value: http://onify-api:8181/api/v2
         - name: ONIFY_API_URL_EXTERNAL
-          value: https://onify-api-ext.it.helsinki.fi/api/v2
+          value: https://onify-api-test.it.helsinki.fi/api/v2
         ports:
         - name: app
           containerPort: 3000
