--- a/APP/onify-https-route.yml
+++ b/APP/onify-https-route.yml
@@ -1,16 +1,15 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name: onify-ext-app-https
-  namespace: onify
-  selfLink: /apis/route.openshift.io/v1/namespaces/onify/routes/onify-ext-app-https
+  name: onify-test-app-https
+  namespace: onify-test
+  selfLink: /apis/route.openshift.io/v1/namespaces/onify/routes/onify-test-app-https
   uid: 9ba11987-868b-46c8-9b85-fe270f2848c4
   resourceVersion: '72900668'
   creationTimestamp: '2020-09-30T15:46:14Z'
   labels:
     app: onify
     tier: app
-    type: external
   managedFields:
     - manager: Mozilla
       operation: Update
@@ -46,7 +45,7 @@ metadata:
         'f:status':
           'f:ingress': {}
 spec:
-  host: onify-ext.apps.ocp-prod-0.k8s.it.helsinki.fi
+  host: onify-test.apps.ocp-prod-0.k8s.it.helsinki.fi
   to:
     kind: Service
     name: onify-app
@@ -59,7 +58,7 @@ spec:
   wildcardPolicy: None
 status:
   ingress:
-    - host: onify-ext.apps.ocp-prod-0.k8s.it.helsinki.fi
+    - host: onify-test.apps.ocp-prod-0.k8s.it.helsinki.fi
       routerName: default
       conditions:
         - type: Admitted
