--- a/Agent-server/onify-agent-route.yml
+++ b/Agent-server/onify-agent-route.yml
@@ -48,7 +48,7 @@ spec:
     name: agent-server
     weight: 100
   port:
-    targetPort: agent-server-http
+    targetPort: agent-server
   tls:
     termination: edge
     certificate: |
