--- a/Agent-server/agent-server-deployment.yml
+++ b/Agent-server/agent-server-deployment.yml
@@ -16,6 +16,7 @@ spec:
      containers:
      - name: agent-server
        image: eu.gcr.io/onify-images/hub/agent-server:2
+       imagePullPolicy: Always
        env:
          - name: log_level
            value: "2"
