--- a/API/onify-api-deployment.yml
+++ b/API/onify-api-deployment.yml
@@ -20,6 +20,11 @@ spec:
       - name: onify-regcred
       containers:
       - name: api
+        resources:
+          requests:
+            memory: "1000Mi"
+          limits:
+            memory: "2000Mi"
         image: eu.gcr.io/onify-images/hub/api:2
         imagePullPolicy: Always
         envFrom:
