--- a/API/onify-api-deployment.yml
+++ b/API/onify-api-deployment.yml
@@ -22,6 +22,13 @@ spec:
       - name: api
         image: eu.gcr.io/onify-images/hub/api:2
         imagePullPolicy: Always
+        resources:
+          requests:
+            memory: "1500Mi"
+            cpu: "1"
+          limits:
+            memory: "2000Mi"
+            cpu: "2"
         envFrom:
         - configMapRef:
             name: onify-api-config
