--- a/APP/onify-https-route.yml
+++ b/APP/onify-https-route.yml
@@ -4,7 +4,7 @@ metadata:
   name: onify-dev-app-https
   namespace: onify
 spec:
-  host: onify-dev.apps.ocp-prod-0.k8s.it.helsinki.fi
+  host: onify-dev.apps.ocp-test-0.k8s.it.helsinki.fi
   to:
     kind: Service
     name: onify-app
