--- a/APP/app-deployment.yml
+++ b/APP/app-deployment.yml
@@ -20,7 +20,7 @@ spec:
       - name: onify-regcred
       containers:
       - name: app
-        image: eu.gcr.io/onify-images/hub/app:2
+        image: eu.gcr.io/onify-images/hub/app:2.4.1
         imagePullPolicy: IfNotPresent
         resources:
           requests:
@@ -29,16 +29,17 @@ spec:
           limits:
             memory: "2000Mi"
             cpu: "2"
+        envFrom:
+        - configMapRef:
+            name: onify-app-config
         env:
-        - name: ONIFY_API_TOKEN
+        - name: ONIFY_api_admintoken
           valueFrom:
            secretKeyRef:
              name: onify-app-secrets
              key: api_token
-        - name: ONIFY_API_URL_INTERNAL
-          value: http://onify-api:8181/api/v2
-        - name: ONIFY_API_URL_EXTERNAL
-          value: https://onify-api-test.it.helsinki.fi/api/v2
+        - name: ONIFY_disableAdminEndpoints
+          value: "false"
         ports:
         - name: app
           containerPort: 3000
