changed image version & added rollingupdate

--- a/API/onify-api-deployment.yml
+++ b/API/onify-api-deployment.yml
@@ -60,3 +60,8 @@ spec:
         - name: resources
           persistentVolumeClaim:
             claimName: onify-resources-pvc
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 100%
+      maxSurge: 25%
