--- a/APP/app-deployment.yml
+++ b/APP/app-deployment.yml
@@ -43,3 +43,8 @@ spec:
         ports:
         - name: app
           containerPort: 3000
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 100%
+      maxSurge: 25%
