--- a/API/onify-api-deployment.yml
+++ b/API/onify-api-deployment.yml
@@ -58,3 +58,8 @@ spec:
         - name: resources
           persistentVolumeClaim:
             claimName: onify-resources-pvc
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 100%
+      maxSurge: 25%
