--- a/API/onify-api-worker-deployment.yml
+++ b/API/onify-api-worker-deployment.yml
@@ -20,7 +20,7 @@ spec:
        - name: onify-regcred
       containers:
       - name: worker
-        image: eu.gcr.io/onify-images/hub/api:2.7.3
+        image: eu.gcr.io/onify-images/hub/api:2.8.1
         args:
         - worker # act as worker
         envFrom:
@@ -44,3 +44,15 @@ spec:
             secretKeyRef:
               name: onify-api-secrets
               key: client_secret
+        volumeMounts:
+        - name: resources
+          mountPath: /usr/share/onify
+      volumes:
+        - name: resources
+          persistentVolumeClaim:
+            claimName: onify-worker-resources-pvc
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 100%
+      maxSurge: 25%
