--- a/API/onify-api-deployment.yml
+++ b/API/onify-api-deployment.yml
@@ -25,7 +25,7 @@ spec:
             memory: "1000Mi"
           limits:
             memory: "2000Mi"
-        image: eu.gcr.io/onify-images/hub/api:2
+        image: eu.gcr.io/onify-images/hub/api:latest
         imagePullPolicy: Always
         envFrom:
         - configMapRef:
