--- a/API/onify-api-deployment.yml
+++ b/API/onify-api-deployment.yml
@@ -20,12 +20,12 @@ spec:
       - name: onify-regcred
       containers:
       - name: api
-        image: eu.gcr.io/onify-images/hub/api:2.8.1
+        image: eu.gcr.io/onify-images/hub/api:2.10.0
         imagePullPolicy: IfNotPresent
         resources:
           requests:
-            memory: "1500Mi"
-            cpu: "1"
+            memory: "500Mi"
+            cpu: 150m
           limits:
             memory: "2000Mi"
             cpu: "2"
